# MindVault-Hybrid-BM25-PageIndex-RAG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ask.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pipeline.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/routes/: __init__.py  documents.py  ingest.py  query.py
app/connectors/: __init__.py  base.py  markdown_connector.py  notion_connector.py  pdf_connector.py
app/core/: config.py  dependencies.py  exceptions.py
app/db/: database.py  models.py
app/db/repositories/: __init__.py  document_repo.py  index_repo.py  query_log_repo.py
app/generation/: __init__.py  citation_formatter.py  llm_client.py  prompt_builder.py
app/indexing/: bm25.py  index_writer.py  tokeniser.py
app/ingestion/: __init__.py  pipeline.py
app/pageindex/: __init__.py  client.py
app/retrieval/: __init__.py  bm25_retriever.py  hybrid_retriever.py  pageindex_retriever.py  retriever.py
app/schemas/: document.py  query.py
app/static/: index.html
config/: .env.example  logging.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
deploy/nginx/: mindvault.conf  nginx.conf
docker/: Dockerfile.dev
scripts/: init_db.py  smoke_test.py
tests/: test_core.py
tests/unit/: test_bm25.py  test_connectors.py  test_hybrid_fusion.py
